added new mod settings

--- a/1.2/Source/VanillaAnimalsExpanded-Endangered/VanillaAnimalsExpandedEndangered/VanillaAnimalsExpanded-Endangered.csproj
+++ b/1.2/Source/VanillaAnimalsExpanded-Endangered/VanillaAnimalsExpandedEndangered/VanillaAnimalsExpanded-Endangered.csproj
@@ -305,6 +305,8 @@
     <Compile Include="JobDriver_GoToWild.cs" />
     <Compile Include="JobDriver_EatAnts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VanillaAnimalsExpandedEndangeredMod.cs" />
+    <Compile Include="VanillaAnimalsExpandedEndangeredSettings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
