--- a/1.3/Source/VanillaAnimalsExpanded-Endangered/VanillaAnimalsExpandedEndangered/VanillaAnimalsExpanded-Endangered.csproj
+++ b/1.3/Source/VanillaAnimalsExpanded-Endangered/VanillaAnimalsExpandedEndangered/VanillaAnimalsExpanded-Endangered.csproj
@@ -308,5 +308,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
